# zhaw_master_toolAnalysis

./: README.md  requirements.txt
DeepTone/: deeptone_api.py  deeptone_api_live.py  deeptone_results.csv  deeptone_results_analysis.xlsx  deeptone_sdk_old.py
DeepTone/deeptone/: pyproject.toml
DeepTone/deeptone/tests/: test_deeptone.py
OpenVokaturi-3-4/: .python-version
OpenVokaturi-3-4/examples/: OpenVokaWavMean-linux64.py  OpenVokaWavMean-win32.py  vokaturi_results.csv  vokaturi_results_analysis.xlsx
OpenVokaturi-3-4/lib/open/ios/: READ_ME_OPEN_IOS.TXT
OpenVokaturi-3-4/lib/open/linux/: READ_ME_OPEN_LINUX.TXT
OpenVokaturi-3-4/lib/open/macos/: OpenVokaturi-3-4-mac.dylib  OpenVokaturi-3-4-mac32.dylib  READ_ME_OPEN_MACOS.TXT
OpenVokaturi-3-4/lib/open/win/: READ_ME_OPEN_WIN.TXT
OpenVokaturi-3-4/src/open/: READ_ME.TXT
