[tool.poetry]
name = "deeptone"
version = "0.1.0"
description = ""
authors = ["Manpreet <singh.manpreet@outlook.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "deeptone"
url = "https://sdk.oto.ai/pypi/"
secondary = true